# SoftwareRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_wasm.sh  index.data  index.html  index.js  index.wasm  test.sh
.github/workflows/: deploy.yml
include/: camera.h  ccanvas.h  point.h  scene.h  vec3.h
page/: index.js  index.wasm
src/: camera.c  ccanvas.c  main.c  point.c  scene.c  vec3.c
test/: tester.h  vec3_test.c
